added short answers to about me

--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
       <h1>Introduction</h1>
       <p>I am looking to better my skills to become a fullstack dev.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I am from Miami Florida!</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>My current hobbies include photography, editing, and coding!</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>To become a fullstack dev!</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Still Miami!</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>My interest for tech has grown with me since my childhood, becoming a web developer is the best way to use my passion for tech and creativity together!</p>
     </section>
 
     <footer id="footer">
